# TritonOA

./: .gitattributes  .gitignore  README.md  TritonOA.yml  TritonOA_dev.yml  aw.m  core.py  pyproject.toml  scripts.py  setup.py  sp.py  tritonoa_dev_310.yml  tritonoa_dev_311.yml
TritonOA/: __init__.py  core.py  kraken.py  plotting.py  profiles.py  scripts.py  signal.py  sp.py  wkrakenenvfil.py
TritonOA/env/: __init__.py  env.py
TritonOA/io/: readwrite.py  sioread.py
TritonOA/models/: kraken.py  kraken_source.py
TritonOA/plotting/: plotting.py
TritonOA/sp/: signal.py
Tutorials/: BellhopTutorial.ipynb  EnvTutorial.ipynb  KrakenTutorial.ipynb  SIOREAD.ipynb  demo_kraken.py
docs/: install_AT_MacOS.md
setup/: install_AT_MacOS.md  mk_sym_links.sh  rm_sym_links.sh
tests/: RunKRAKEN.ipynb
tritonoa/: core.py  data.py  io.py  kraken.py  plotting.py  profiles.py  sp.py  ssp.py  utilities.py  utils.py
tritonoa/at/env/: array.py  env.py  halfspace.py  ssp.py
tritonoa/at/models/: model.py
tritonoa/at/models/bellhop/: beams.py  bellhop.py  runner.py
tritonoa/at/models/kraken/: kraken.py  modes.py  runner.py
tritonoa/io/: profile.py  sio.py
tritonoa/signal/: mfp.py  sp.py
tritonoa/sp/: beamforming.py  mfp.py  noise.py  physics.py  processing.py  timefreq.py  timeseries.py
tritonoa2/: core.py  kraken.py  plotting.py  profiles.py
tutorials/: README.md  RunBELLHOP.ipynb  RunKRAKEN.ipynb  RunMFP.ipynb
