[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tritonoa"
description = "Package provides interface to ocean acoustic modeling and analysis tools."
authors = [{ name = "William Jenkins", email = "wjenkins@ucsd.edu" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "cmocean",
    "feather-format",
    "jupyterlab",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/NeptuneProjects/TritonOA"

[tool.setuptools.packages.find]
include = ["tritonoa"]

[tool.setuptools.dynamic]
version = { attr = "tritonoa.__version__" }
