[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TritonOA"
description = "Package provides interface to ocean acoustic modeling and analysis tools."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["underwater", "acoustics", "signal", "processing", "ocean"]
authors = [{name = "William Jenkins", email = "wjenkins@ucsd.edu"}]
dependencies = ["cmocean", "feather-format", "gsw", "jupyterlab", "matplotlib", "numpy", "pandas", "scipy", "tqdm"]
version = "1.1.0"

[project.urls]
Repository = "https://github.com/NeptuneProjects/TritonOA"

[tool.setuptools.packages.find]
where = ["."]
include = ["tritonoa*"]
